[package]
edition = "2021"
name = "todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.14", features = ["derive"]}
dirs = "4.0.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
